--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 20px; text-align: center; }
+    .attribution { font-size: 11px; text-align: center; }
     .attribution a:hover { color: hsl(0, 80%, 44%); }
   </style>
 </head>
@@ -33,8 +33,10 @@
       <h3><s>$169.99</s> </h3>
     </section>
     <button class="verde" >
-      <img src="images/icon-cart.svg" id="cart" alt="carrito">
-        Add to Cart 
+      <span id="cart">
+        <img src="images/icon-cart.svg" id="cart" alt="carrito">
+      </span>
+      <a href="#" id="letras">Add to Cart </a>
     </button>
 
   </div>
